--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,102 @@
 html {
   font-family: "Unica One", sans-serif;
 }
+
+@keyframes offset {
+
+  to {
+    stroke-dashoffset: 0;
+  }
+
+}
+
+#rainbow-indigo {
+  animation: offset 2s linear forwards;
+  stroke-dasharray: 1900px;
+  stroke-dashoffset: 1900px;
+  animation-delay: 2s;
+}
+
+#rainbow-violet {
+  animation: offset 2s linear forwards;
+  stroke-dasharray: 1950px;
+  stroke-dashoffset: 1950px;
+  animation-delay: 2s;
+}
+
+#rainbow-blue {
+  animation: offset 2s linear forwards;
+  stroke-dasharray: 1900px;
+  stroke-dashoffset: 1900px;
+  animation-delay: 2s;
+}
+
+#rainbow-green {
+  animation: offset 2s linear forwards;
+  stroke-dasharray: 1900px;
+  stroke-dashoffset: 1900px;
+  animation-delay: 2s;
+}
+
+#rainbow-yellow {
+  animation: offset 2s linear forwards;
+  stroke-dasharray: 1900px;
+  stroke-dashoffset: 1900px;
+  animation-delay: 2s;
+}
+
+#rainbow-orange {
+  animation: offset 2s linear forwards;
+  stroke-dasharray: 1900px;
+  stroke-dashoffset: 1900px;
+  animation-delay: 2s;
+}
+
+#rainbow-red {
+  animation: offset 2s linear forwards;
+  stroke-dasharray: 1900px;
+  stroke-dashoffset: 1900px;
+  animation-delay: 2s;
+}
+
+@keyframes fade {
+
+  0% {
+    opacity: 0;
+    filter: blur(5px);
+  }
+
+  100% {
+    opacity: 1;
+    filter: blur(0);
+  }
+
+}
+
+h1 {
+  transform: translateX(1em);
+  transform: translateY(5em);
+  color: #fff;
+  animation: fade 1s linear;
+}
+
+@keyframes whale {
+
+  to {
+    stroke-dashoffset: 0;
+  }
+
+}
+
+#narwhal-body {
+  animation: whale 1s linear forwards;
+  stroke-dasharray: 1950px;
+  stroke-dashoffset: 1950px;
+  animation-delay: 1s;
+}
+
+#narwhal-eye {
+  animation: fade 1s linear forwards;
+  opacity: 0;
+  animation-delay: 1s;
+}
